--- a/etc/docker/docker-compose.infrastructure.override.yml
+++ b/etc/docker/docker-compose.infrastructure.override.yml
@@ -14,13 +14,13 @@ services:
     ports:
       - "27017:27017"
       
-  mongo-express:
-    ports:
-      - "8081:8081"    
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=admin123
+  # mongo-express:
+  #   ports:
+  #     - "8081:8081"    
+  #   environment:
+  #     - ME_CONFIG_MONGODB_SERVER=mongodb
+  #     - ME_CONFIG_BASICAUTH_USERNAME=admin
+  #     - ME_CONFIG_BASICAUTH_PASSWORD=admin123
 
   postgres-db:
     ports:
@@ -29,22 +29,21 @@ services:
       POSTGRES_DB: keycloak
       POSTGRES_PASSWORD: "myPassw0rd"
 
-  pgadmin:
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+  # pgadmin:
+  #   ports:
+  #     - "${PGADMIN_PORT:-5050}:80"
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
 
   keycloak:
     ports:
       - "8080:8080"
     environment:
-      DB_VENDOR: postgres
-      DB_ADDR: "postgres-db"
-      DB_DATABASE: "keycloak"
-      DB_USER: "postgres"
-      DB_PASSWORD: "myPassw0rd"
+      KC_DB: postgres
+      KC_DB_URL: "jdbc:postgresql://postgres-db:5432/keycloak"
+      KC_DB_USERNAME: "postgres"
+      KC_DB_PASSWORD: "myPassw0rd"
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: "1q2w3E*"
       KC_HEALTH_ENABLED: "true"
