--- a/shared/EShopOnAbp.Shared.Hosting.Microservices/EShopOnAbp.Shared.Hosting.Microservices.csproj
+++ b/shared/EShopOnAbp.Shared.Hosting.Microservices/EShopOnAbp.Shared.Hosting.Microservices.csproj
@@ -21,7 +21,8 @@
         <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="Volo.Abp.BackgroundJobs.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="8.1.3" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="8.1.3" />        
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="8.1.3" />
+        <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.1.3" />
     </ItemGroup>
 
     <ItemGroup>
